--- a/Home.html
+++ b/Home.html
@@ -167,10 +167,8 @@
             </i>
         </div>
         <div class="mapcontent map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122081.4700155912!2d81.73001697675922!3d26.851808185256175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399c41234f1207df%3A0xc85f58343be1a71c!2sRamadevi%2C%20Lal%20Bungalow%2C%20Jajmau%20Sub%20Metro%20City%2C%20Kanpur%2C%20Uttar%20Pradesh%20208007!5e0!3m2!1sen!2sin!4v1645375725004!5m2!1sen!2sin"
-                width="100%" height="600px" style="border:0;padding:30px;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d228692.79721418145!2d80.37698899999997!3d26.412988099999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1652076536484!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		   </div>
     </div>
 </body>
 
